--- a/css/menubar.css
+++ b/css/menubar.css
@@ -4,7 +4,7 @@
 .menubar {
   z-index : 2;
   width   : 100%;
-  height  : 60px;
+  // height  : 60px;
   background-color: #fff;
 /*  box-shadow      : 0px 1px 4px 2px rgba(128,128,128,0.5);*/
   border-bottom   : 1px solid rgba(128,128,128,0.4);
@@ -20,11 +20,17 @@
 
 .menubar--mainnav {
   list-style      : none;
-  display         : flex;
-  justify-content : space-between;
+  // display         : flex;
+  // justify-content : space-between;
   padding         : 0;
   margin          : 6px 0 0 0;
   border-top      : 1px solid #070;
+}
+
+.menu-item img{
+  display: block;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .menubar--mainnav li {
@@ -59,16 +65,26 @@
   height              : 41px;
 }
 
+
+
+/* ------------------------------ mobile menu ------------------------------ */
+
+#mobile-navbar.uk-navbar-container {background-color: #fff}
+
+
+
 /* ------------------------------ mobile first ------------------------------ */
 
 /* below 380px wide styles */
 .menubar {
-  height  : 60px;
+  // height  : 60px;
 }
 
-.menubar--logo {
-  width       : 102px;
-  padding-top : 21px; /* logo size */
+#mobile-menu .menubar--logo {
+width: 200px;
+height: 100%;
+margin-left: 20px;
+
 }
 
 .menubar--inner {
@@ -81,7 +97,7 @@
 @media only screen and (min-width : 380px) {
 
   .menubar {
-    height  : 70px;
+    // height  : 70px;
   }
 
   .menubar--mainnav li {
@@ -94,6 +110,8 @@
     font-weight    : normal;
   }
 
+
+
 }
 
 /* ------------------------------------------- */
@@ -102,18 +120,24 @@
 @media only screen and (min-width : 768px) {
 
   .menubar {
-    height: 95px;
+    // height: 95px;
   }
 
   .menubar--logo {
-    width       : 131px;
-    padding-top : 36px;
-    margin-right: 25px;
+    width: 100%;
+    height: 50%;
+    margin-right: 0;
+
   }
 
   .menubar--mainnav li a {
-    font-size   : 16px;
+    font-size   : 16px
     font-weight : normal;
+  }
+
+  .menubar--nav .uk-first-column{
+    width: 250px;
+    padding-left: 0;
   }
 
 }
@@ -124,7 +148,7 @@
 @media only screen and (min-width : 992px) {
  
   .menubar {
-      height: 80px;
+      // height: 80px;
   }
 
   .menubar--inner {
@@ -132,18 +156,18 @@
   }
  
   .menubar--nav { /* pull menu up onto same line as logo */
-    display         : flex;  
-    justify-content : space-between;
+    // display         : flex;  
+    // justify-content : space-between;
   }
 
   .menubar--mainnav {
     border-top: none;
-    flex : 1 0 auto;
+    // flex : 1 0 auto;
   }
   
   .menubar--logo {
-    flex        : 0 1 auto;
-    margin-right: 40px;
+    // flex        : 0 1 auto;
+    // margin-right: 40px;
   }
 
   .menubar--social {
@@ -173,7 +197,7 @@
 
 @media only screen and (min-width : 1200px) {
  .menubar {
-      height: 90px;
+      // height: 90px;
   }
 }
 
@@ -182,7 +206,7 @@
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1700px) {
  .menubar {
-      height: 100px;
+      // height: 100px;
   }
   .menubar--logo {
     margin-right: 60px;
