--- a/css/menubar.css
+++ b/css/menubar.css
@@ -4,14 +4,14 @@
 .menubar {
   z-index : 2;
   width   : 100%;
-  // height  : 60px;
   background-color: #fff;
-/*  box-shadow      : 0px 1px 4px 2px rgba(128,128,128,0.5);*/
+  box-shadow      : 0px 1px 4px 2px rgba(128,128,128,0.5);
   border-bottom   : 1px solid rgba(128,128,128,0.4);
+  padding-bottom: 1em;
 }
 
 .menubar--logo {
-  background-image    : url(../img/sas_logo.png);
+  background-image    : url(../img/sasp_logo.png);
   background-repeat   : no-repeat;
   background-position : left center;
   background-size     : contain;
@@ -20,29 +20,82 @@
 
 .menubar--mainnav {
   list-style      : none;
-  // display         : flex;
-  // justify-content : space-between;
+/*  display         : flex;
+  justify-content : space-between;*/
   padding         : 0;
   margin          : 6px 0 0 0;
   border-top      : 1px solid #070;
 }
 
-.menu-item img{
+#mainnav .menu-item {
+/*    width: 100%;
+  height: 0;
+  padding-top:50%;
+  background-image: url(/wp-content/themes/sasv2/img/button-emo.png);
+  background-size: 50% auto;
+  background-repeat: no-repeat;*/
+  padding-left: 20px;
+}
+#mainnav br{
+  display: block;
+margin-top: -5px;
+
+}
+
+#mainnav .menu-item img{
   display: block;
   width: 50%;
   margin: 0 auto;
+visibility: hidden;
+
+}
+#mainnav .menu-item a::before{
+  display: block;
+}
+#mainnav .menu-item a[href*="emotional-support"]::before  {
+    content:url("/wp-content/themes/sasv2/img/button-emo.png");
+
 }
 
-.menubar--mainnav li {
+#mainnav .menu-item a[href*="practical-support"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-practical.png");
+}
+#mainnav .menu-item a[href*="someone-else"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-someone.png");
+}
+
+#mainnav .menu-item a[href*="what-to-say"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-say.png");
+}
+
+
+#mainnav .menu-item a[href*="your-stories"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-stories.png");
+}
+
+#mainnav .menu-item a[href*="support-guides"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-guides.png");
+}
+
+#mainnav .menu-item a[href*="survey"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-survey.png");
+}
+
+
+
+
+
+#mainnav .menubar--mainnav li {
   flex          : 0 1 auto; /* flex-grow flex-shrink flex-basis */
   margin-bottom : 0px;      /* overrides li margin style in main content */
   line-height   : 3vw;      /* overrides li line height style in main content */
 }
 
-.menubar--mainnav a {
+#mainnav .menubar--mainnav a {
   color           : #787878;
   text-decoration : none;
   font-size       : 9px;
+  line-height: 1;
 }
 
 .facebook {
@@ -67,17 +120,36 @@
 
 
 
+
+li.menu-item a{
+/*  display: inline-block;*/
+}
+
+
+li.menu-item::before {
+/*    content: " ";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    -moz-border-radius: 7.5px;
+    -webkit-border-radius: 7.5px;
+    border-radius: 7.5px;
+    background-color: #69b6d5;
+    margin-right: 10px;*/
+}
+
+
 /* ------------------------------ mobile menu ------------------------------ */
 
 #mobile-navbar.uk-navbar-container {background-color: #fff}
 
-
+#dropmenu{background: white}
 
 /* ------------------------------ mobile first ------------------------------ */
 
 /* below 380px wide styles */
 .menubar {
-  // height  : 60px;
+  /*height  : 60px;*/
 }
 
 #mobile-menu .menubar--logo {
@@ -97,7 +169,7 @@ margin-left: 20px;
 @media only screen and (min-width : 380px) {
 
   .menubar {
-    // height  : 70px;
+     /*height  : 70px;*/
   }
 
   .menubar--mainnav li {
@@ -110,8 +182,21 @@ margin-left: 20px;
     font-weight    : normal;
   }
 
+li.menu-item a{
+/*  display: inline-block;*/
+}
 
 
+li.menu-item::before {
+/*    content: " ";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    -moz-border-radius: 7.5px;
+    -webkit-border-radius: 7.5px;
+    border-radius: 7.5px;
+    background-color: #69b6d5;
+    margin-right: 10px;*/
 }
 
 /* ------------------------------------------- */
@@ -120,12 +205,12 @@ margin-left: 20px;
 @media only screen and (min-width : 768px) {
 
   .menubar {
-    // height: 95px;
+     /*height: 95px;*/
   }
 
   .menubar--logo {
     width: 100%;
-    height: 50%;
+    height: 85%;
     margin-right: 0;
 
   }
@@ -135,7 +220,7 @@ margin-left: 20px;
     font-weight : normal;
   }
 
-  .menubar--nav .uk-first-column{
+.logo--container{
     width: 250px;
     padding-left: 0;
   }
@@ -148,7 +233,7 @@ margin-left: 20px;
 @media only screen and (min-width : 992px) {
  
   .menubar {
-      // height: 80px;
+       /*height: 80px;*/
   }
 
   .menubar--inner {
@@ -156,18 +241,18 @@ margin-left: 20px;
   }
  
   .menubar--nav { /* pull menu up onto same line as logo */
-    // display         : flex;  
-    // justify-content : space-between;
+/*    // display         : flex;  
+    // justify-content : space-between;*/
   }
 
   .menubar--mainnav {
     border-top: none;
-    // flex : 1 0 auto;
+/*    // flex : 1 0 auto;*/
   }
   
   .menubar--logo {
-    // flex        : 0 1 auto;
-    // margin-right: 40px;
+/*    // flex        : 0 1 auto;
+    // margin-right: 40px;*/
   }
 
   .menubar--social {
@@ -197,7 +282,7 @@ margin-left: 20px;
 
 @media only screen and (min-width : 1200px) {
  .menubar {
-      // height: 90px;
+/*      // height: 90px;*/
   }
 }
 
@@ -206,7 +291,7 @@ margin-left: 20px;
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1700px) {
  .menubar {
-      // height: 100px;
+/*      // height: 100px;*/
   }
   .menubar--logo {
     margin-right: 60px;
