--- a/css/content.css
+++ b/css/content.css
@@ -142,7 +142,7 @@ strong {
 }
 
 h4 {
-  font-size: 1.5em;
+/*  font-size: 1.5em;*/
 }
 .content {
   color: rgb(128,128,128);
@@ -237,9 +237,9 @@ h4 {
 }
 
 blockquote {
-    background: url(../img/emotional_support_resized.png);
+    /*background: url(../img/emotional_support_resized.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover;*/
     display: block;
     position: relative;
     width: 100%;
@@ -346,7 +346,7 @@ blockquote p {
   }*/
 
   .content-inner-top {
-    margin-top: 130px;
+/*    margin-top: 130px;*/
   }
 
   .content-top p {
