--- a/css/content.css
+++ b/css/content.css
@@ -114,6 +114,9 @@ td {
   // height:120%;
   // margin-left: auto;
   // margin-right: auto;*/
+  padding-top: 3em;
+  padding-bottom: 3em;
+
 }
 
 
