--- a/css/menubar.css
+++ b/css/menubar.css
@@ -35,6 +35,7 @@
   background-size: 50% auto;
   background-repeat: no-repeat;*/
   padding-left: 20px;
+  line-height: 1.1;
 }
 #mainnav br{
   display: block;
@@ -80,7 +81,9 @@ visibility: hidden;
 #mainnav .menu-item a[href*="survey"]::before {
   content:url("/wp-content/themes/sasv2/img/button-survey.png");
 }
-
+#mainnav .menu-item a[href*="research"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-survey.png");
+}
 
 
 
@@ -127,15 +130,7 @@ li.menu-item a{
 
 
 li.menu-item::before {
-/*    content: " ";
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    -moz-border-radius: 7.5px;
-    -webkit-border-radius: 7.5px;
-    border-radius: 7.5px;
-    background-color: #69b6d5;
-    margin-right: 10px;*/
+
 }
 
 
@@ -144,6 +139,47 @@ li.menu-item::before {
 #mobile-navbar.uk-navbar-container {background-color: #fff}
 
 #dropmenu{background: white}
+
+
+#dropdown-nav-primary{
+  background-color: #eee;
+}
+
+ #dropdown-nav-primary .menu-item a{
+   padding-left:5px
+ }
+ #dropdown-nav-primary .menu-item a::before {
+  color:  #F1907A ;
+  content: ' \25CF ';
+  font-size: 25px;
+  line-height: 0.8;
+  margin-right: 7px;
+}
+
+ #dropdown-nav-primary .menu-item a[href*="practical-support"]::before {
+    color: #00B1BD;
+ }
+ #dropdown-nav-primary .menu-item a[href*="someone-else"]::before {
+    color: #f2966d;
+ }
+ #dropdown-nav-primary .menu-item a[href*="what-to-say"]::before {
+    color: #F29569;
+ }
+ #dropdown-nav-primary .menu-item a[href*="your-stories"]::before {
+    color: #F17479;
+ }
+
+ #dropdown-nav-primary .menu-item a[href*="support-guides"]::before {
+    color: #9F729F;
+ }
+
+ #dropdown-nav-primary .menu-item a[href*="survey"]::before {
+    color: #76418D;
+ }
+ #dropdown-nav-primary .menu-item a[href*="research"]::before {
+    color: #76418D;
+ }
+
 
 /* ------------------------------ mobile first ------------------------------ */
 
