--- a/style.css
+++ b/style.css
@@ -71,11 +71,17 @@ a.no_decoration {
     margin: 0.5em 1em 0.5em 0;
 }
 
-.bordered{
+.footermenu{
   -webkit-box-shadow: 0px 3px 2px -1px rgba(50, 50, 50, 0.75), 0px -3px 2px -3px rgba(50, 50, 50, 0.75);
 -moz-box-shadow:    0px 3px 2px -1px rgba(50, 50, 50, 0.75), 0px -3px 2px -3px rgba(50, 50, 50, 0.75);
 box-shadow: 0px 3px 2px -3px rgba(50, 50, 50, 0.75), 0px -3px 2px -3px rgba(50, 50, 50, 0.75);
 
 }
 
+
 .text-white{color: #fff}
+
+
+.uk-card-title {
+    line-height: 1.2;
+}
