--- a/css/home.css
+++ b/css/home.css
@@ -31,18 +31,30 @@
 .home .metaslider .caption-wrap {
   position: absolute;
   top: 32%;
-  left: 25%;
+
   bottom: initial;
   width: 50%;
   line-height: 33px;
   text-align: center;
   border-radius: 5px;
-  background-color: white;
+  color: #fff;
+  pointer-events: none;
+  background-color: #fff;
   color: #333;
+  padding:2em;
+  opacity: 0.8;
+  box-shadow: 0px 1px 4px 2px rgba(128,128,128,0.5);
+
+    left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
 }
+
 
 .home .metaslider .caption {
     font-size: 28px;
+    pointer-events: none;
 }
 /* --------- preview block --------- */
 
@@ -72,7 +84,10 @@
   padding: 15px;
   background:rgb(59,157,181);
 }
-
+#homecards img{
+  width: 70%;
+height: auto;
+}
 
 .home .preview-block p {
   padding: 5px 15px;
