--- a/css/menubar.css
+++ b/css/menubar.css
@@ -11,7 +11,7 @@
 }
 
 .menubar--logo {
-  background-image    : url(../img/sasp_logo.png);
+  background-image    : url(../img/sasp_logo-m2x.png);
   background-repeat   : no-repeat;
   background-position : left center;
   background-size     : contain;
@@ -83,7 +83,9 @@ visibility: hidden;
   content:url("/wp-content/themes/sasv2/img/button-survey.png");
 }
 
-
+#mainnav .menu-item a[href*="local-services"]::before {
+  content:url("/wp-content/themes/sasv2/img/button-guides.png");
+}
 
 
 
@@ -99,6 +101,12 @@ visibility: hidden;
   font-size       : 9px;
   line-height: 1;
 }
+
+.menubar--social{
+  width: 126px;
+    max-width: 126px;
+}
+
 
 .facebook {
   background-image    : url(../img/facebook.png);
@@ -188,7 +196,7 @@ li.menu-item::before {
 
 #mobile-menu .menubar--logo {
 width: 200px;
-height: 100%;
+height: 80px;
 margin-left: 20px;
 
 }
@@ -243,8 +251,10 @@ li.menu-item::before {
   }
 
   .menubar--logo {
-    width: 100%;
-    height: 85%;
+      background-image    : url(../img/sasp_logo2x.png);
+    width: 250px;
+    height: 104px;
+
     margin-right: 0;
 
   }
