--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -6,7 +6,7 @@
   width           : 100%;
   box-shadow      : 0px 1px 4px 2px rgba(128,128,128,0.5);
   padding         : 3px 0;
-  margin-top      : 1px;
+  margin-top      : 0;
 /*  position        : fixed;*/
 }
 
