--- a/css/stories.css
+++ b/css/stories.css
@@ -2,321 +2,24 @@
 
 
 
+.startquote svg {
+    transform-origin: 50% 25%;
+    transform: rotate(180deg);
+}
 
-
-@font-face {
-    font-family: 'WebSymbolsRegular';
-    src: url('http://html5css3demos.bplaced.net/css3-slider-v3/websymbols-regular-webfont.eot');
-    src: url('http://html5css3demos.bplaced.net/css3-slider-v3/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'), url('http://html5css3demos.bplaced.net/css3-slider-v3/websymbols-regular-webfont.woff') format('woff'), url('http://html5css3demos.bplaced.net/css3-slider-v3/websymbols-regular-webfont.ttf') format('truetype'), url('http://html5css3demos.bplaced.net/css3-slider-v3/websymbols-regular-webfont#WebSymbolsRegular') format('svg');
+.endquote svg {
+    transform: translate(0px, -5px);
 }
 
 
-#slideshow-wrap {
-    display: block;
-    position: relative;
-    height: calc(100% - 100px);
-}
-
-#slideshow-inner {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-#slideshow-inner>ul {
-    list-style: none;
-    width: 2200%;
-    overflow: hidden;
-    position: relative;
-    left: 0px;
-    padding-left: 0px;
-    -webkit-transition: left .8s cubic-bezier(0.77, 0, 0.175, 1);
-    -moz-transition: left .8s cubic-bezier(0.77, 0, 0.175, 1);
-    -o-transition: left .8s cubic-bezier(0.77, 0, 0.175, 1);
-    transition: left .8s cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-#slideshow-inner>ul>li {
-    width: 4.54%;
-    float: left;
-    position: relative;
-}
-
-#slideshow-wrap input[type=radio] {
-    position: absolute;
-    left: 50%;
-    bottom: 15px;
-    z-index: 100;
-    visibility: hidden;
-}
-
-#slideshow-wrap label:not(.arrows):not(.show-description-label) {
-    position: absolute;
-    left: 27%;
-    bottom: -45px;
-    z-index: 100;
-    width: 12px;
-    height: 12px;
-    background-color: rgba(200,200,200,1);
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,.8);
-    -moz-box-shadow: 0px 0px 3px rgba(0,0,0,.8);
-    box-shadow: 0px 0px 3px rgba(0,0,0,.8);
-    -webkit-transition: background-color .2s;
-    -moz-transition: background-color .2s;
-    -o-transition: background-color .2s;
-    transition: background-color .2s;
-}
-
-#slideshow-wrap label:not(.arrows):active { bottom: -46px }
-
-#slideshow-wrap input[type=radio]#button-1:checked~label[for=button-1] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-2:checked~label[for=button-2] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-3:checked~label[for=button-3] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-4:checked~label[for=button-4] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-5:checked~label[for=button-5] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-6:checked~label[for=button-6] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-7:checked~label[for=button-7] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-8:checked~label[for=button-8] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-9:checked~label[for=button-9] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-10:checked~label[for=button-10] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-11:checked~label[for=button-11] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-12:checked~label[for=button-12] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-13:checked~label[for=button-13] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-14:checked~label[for=button-14] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-15:checked~label[for=button-15] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-16:checked~label[for=button-16] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-17:checked~label[for=button-17] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-18:checked~label[for=button-18] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-19:checked~label[for=button-19] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-20:checked~label[for=button-20] { background-color: rgba(100,100,100,1) }
-
-#slideshow-wrap input[type=radio]#button-21:checked~label[for=button-21] { background-color: rgba(100,100,100,1) }
-
-
-#slideshow-wrap label[for=button-1] { margin-left: -36px }
-
-#slideshow-wrap label[for=button-2] { margin-left: -18px }
-
-#slideshow-wrap label[for=button-4] { margin-left: 18px }
-
-#slideshow-wrap label[for=button-5] { margin-left: 36px }
-
-#slideshow-wrap label[for=button-6] { margin-left: 54px }
-
-#slideshow-wrap label[for=button-7] { margin-left: 72px }
-
-#slideshow-wrap label[for=button-8] { margin-left: 90px }
-
-#slideshow-wrap label[for=button-9] { margin-left: 108px }
-
-#slideshow-wrap label[for=button-10] { margin-left: 126px }
-
-#slideshow-wrap label[for=button-11] { margin-left: 144px }
-
-#slideshow-wrap label[for=button-12] { margin-left: 162px }
-
-#slideshow-wrap label[for=button-13] { margin-left: 180px }
-
-#slideshow-wrap label[for=button-14] { margin-left: 198px }
-
-#slideshow-wrap label[for=button-15] { margin-left: 216px }
-
-#slideshow-wrap label[for=button-16] { margin-left: 234px }
-
-#slideshow-wrap label[for=button-17] { margin-left: 252px }
-
-#slideshow-wrap label[for=button-18] { margin-left: 270px }
-
-#slideshow-wrap label[for=button-19] { margin-left: 288px }
-
-#slideshow-wrap label[for=button-20] { margin-left: 306px }
-
-#slideshow-wrap label[for=button-21] { margin-left: 324px }
-
-
-
-
-
-#slideshow-wrap input[type=radio]#button-1:checked~#slideshow-inner>ul { left: 0 }
-
-#slideshow-wrap input[type=radio]#button-2:checked~#slideshow-inner>ul { left: -100% }
-
-#slideshow-wrap input[type=radio]#button-3:checked~#slideshow-inner>ul { left: -200% }
-
-#slideshow-wrap input[type=radio]#button-4:checked~#slideshow-inner>ul { left: -300% }
-
-#slideshow-wrap input[type=radio]#button-5:checked~#slideshow-inner>ul { left: -400% }
-
-#slideshow-wrap input[type=radio]#button-6:checked~#slideshow-inner>ul { left: -500% }
-
-#slideshow-wrap input[type=radio]#button-7:checked~#slideshow-inner>ul { left: -600% }
-
-#slideshow-wrap input[type=radio]#button-8:checked~#slideshow-inner>ul { left: -700% }
-
-#slideshow-wrap input[type=radio]#button-9:checked~#slideshow-inner>ul { left: -800% }
-
-#slideshow-wrap input[type=radio]#button-10:checked~#slideshow-inner>ul { left: -900% }
-
-#slideshow-wrap input[type=radio]#button-11:checked~#slideshow-inner>ul { left: -1000% }
-
-#slideshow-wrap input[type=radio]#button-12:checked~#slideshow-inner>ul { left: -1100% }
-
-#slideshow-wrap input[type=radio]#button-13:checked~#slideshow-inner>ul { left: -1200% }
-
-#slideshow-wrap input[type=radio]#button-14:checked~#slideshow-inner>ul { left: -1300% }
-
-#slideshow-wrap input[type=radio]#button-15:checked~#slideshow-inner>ul { left: -1400% }
-
-#slideshow-wrap input[type=radio]#button-16:checked~#slideshow-inner>ul { left: -1500% }
-
-#slideshow-wrap input[type=radio]#button-17:checked~#slideshow-inner>ul { left: -1600% }
-
-#slideshow-wrap input[type=radio]#button-18:checked~#slideshow-inner>ul { left: -1700% }
-
-#slideshow-wrap input[type=radio]#button-19:checked~#slideshow-inner>ul { left: -1800% }
-
-#slideshow-wrap input[type=radio]#button-20:checked~#slideshow-inner>ul { left: -1900% }
-
-#slideshow-wrap input[type=radio]#button-21:checked~#slideshow-inner>ul { left: -2000% }
-
-
-label.arrows {
-    font-family: 'WebSymbolsRegular';
-    font-size: 4vw;
-    color: rgb(255,255,255);
-    position: absolute;
-    top: 50%;
-    margin-top: -25px;
-    display: none;
-    opacity: 0.7;
-    cursor: pointer;
-    z-index: 1000;
-    background-color: transparent;
-    -webkit-transition: opacity .2s;
-    -moz-transition: opacity .2s;
-    -o-transition: opacity .2s;
-    transition: opacity .2s;
-    text-shadow: 0px 0px 3px rgba(0,0,0,.8);
-}
-
-label.arrows:hover { opacity: 1 }
-
-label.arrows:active { margin-top: -23px }
-
-input[type=radio]#button-1:checked~.arrows#arrow-2, 
-input[type=radio]#button-2:checked~.arrows#arrow-3, 
-input[type=radio]#button-3:checked~.arrows#arrow-4, 
-input[type=radio]#button-4:checked~.arrows#arrow-5, 
-input[type=radio]#button-5:checked~.arrows#arrow-6, 
-input[type=radio]#button-6:checked~.arrows#arrow-7, 
-input[type=radio]#button-7:checked~.arrows#arrow-8, 
-input[type=radio]#button-8:checked~.arrows#arrow-9,
-input[type=radio]#button-9:checked~.arrows#arrow-10, 
-input[type=radio]#button-10:checked~.arrows#arrow-11, 
-input[type=radio]#button-11:checked~.arrows#arrow-12, 
-input[type=radio]#button-12:checked~.arrows#arrow-13,
-input[type=radio]#button-13:checked~.arrows#arrow-14, 
-input[type=radio]#button-14:checked~.arrows#arrow-15, 
-input[type=radio]#button-15:checked~.arrows#arrow-16, 
-input[type=radio]#button-16:checked~.arrows#arrow-17,
-input[type=radio]#button-17:checked~.arrows#arrow-18,
-input[type=radio]#button-18:checked~.arrows#arrow-19, 
-input[type=radio]#button-19:checked~.arrows#arrow-20, 
-input[type=radio]#button-20:checked~.arrows#arrow-21
-{
-    right: -40%;
-    display: block;
-}
-
-input[type=radio]#button-2:checked~.arrows#arrow-1, 
-input[type=radio]#button-3:checked~.arrows#arrow-2, 
-input[type=radio]#button-4:checked~.arrows#arrow-3, 
-input[type=radio]#button-5:checked~.arrows#arrow-4, 
-input[type=radio]#button-6:checked~.arrows#arrow-5, 
-input[type=radio]#button-7:checked~.arrows#arrow-6, 
-input[type=radio]#button-8:checked~.arrows#arrow-7, 
-input[type=radio]#button-9:checked~.arrows#arrow-8, 
-input[type=radio]#button-10:checked~.arrows#arrow-9, 
-input[type=radio]#button-11:checked~.arrows#arrow-10, 
-input[type=radio]#button-12:checked~.arrows#arrow-11, 
-input[type=radio]#button-13:checked~.arrows#arrow-12, 
-input[type=radio]#button-14:checked~.arrows#arrow-13, 
-input[type=radio]#button-15:checked~.arrows#arrow-14, 
-input[type=radio]#button-16:checked~.arrows#arrow-15, 
-input[type=radio]#button-17:checked~.arrows#arrow-16, 
-input[type=radio]#button-18:checked~.arrows#arrow-17, 
-input[type=radio]#button-19:checked~.arrows#arrow-18, 
-input[type=radio]#button-20:checked~.arrows#arrow-19, 
-input[type=radio]#button-21:checked~.arrows#arrow-20
-{
-    left: calc(-40% - 36px);
-    display: block;
-    -webkit-transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -ms-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    transform: scaleX(-1);
-}
-
-input[type=radio]#button-2:checked~.arrows#arrow-1   { left: -40% !important}
-input[type=radio]#button-3:checked~.arrows#arrow-2   { left: calc(-40% - 18px) !important}
-input[type=radio]#button-4:checked~.arrows#arrow-3   { left: calc(-40% - 36px) !important}
-input[type=radio]#button-5:checked~.arrows#arrow-4   { left: calc(-40% - 54px) !important}
-input[type=radio]#button-6:checked~.arrows#arrow-5   { left: calc(-40% - 72px) !important}
-input[type=radio]#button-7:checked~.arrows#arrow-6   { left: calc(-40% - 90px) !important}
-input[type=radio]#button-8:checked~.arrows#arrow-7   { left: calc(-40% - 108px) !important}
-input[type=radio]#button-9:checked~.arrows#arrow-8   { left: calc(-40% - 126px) !important}
-input[type=radio]#button-10:checked~.arrows#arrow-9  { left: calc(-40% - 144px) !important}
-input[type=radio]#button-11:checked~.arrows#arrow-10 { left: calc(-40% - 162px) !important}
-input[type=radio]#button-12:checked~.arrows#arrow-11 { left: calc(-40% - 180px) !important}
-input[type=radio]#button-13:checked~.arrows#arrow-12 { left: calc(-40% - 198px) !important}
-input[type=radio]#button-14:checked~.arrows#arrow-13 { left: calc(-40% - 216px) !important}
-input[type=radio]#button-15:checked~.arrows#arrow-14 { left: calc(-40% - 234px) !important}
-input[type=radio]#button-16:checked~.arrows#arrow-15 { left: calc(-40% - 252px) !important}
-input[type=radio]#button-17:checked~.arrows#arrow-16 { left: calc(-40% - 270px) !important}
-input[type=radio]#button-18:checked~.arrows#arrow-17 { left: calc(-40% - 288px) !important}
-input[type=radio]#button-19:checked~.arrows#arrow-18 { left: calc(-40% - 306px) !important}
-input[type=radio]#button-20:checked~.arrows#arrow-19 { left: calc(-40% - 324px) !important}
-
-
-.description {
-
-}
-
-.description .description-text img {
-    width: 100%;
-}
 
 /* ------------------------------ mobile first ------------------------------ */
 
 /* below 380px wide styles */
-
+#slider h3 {
+    font-size: 1.5em;
+    line-height: 1;
+}
 
 
 /* ------------------------------------------- */
@@ -324,22 +27,23 @@ input[type=radio]#button-20:checked~.arrows#arrow-19 { left: calc(-40% - 324px) 
 /* Small Devices, latest Phones */ 
 @media only screen and (min-width : 380px) {
 
+
 }
 
 /* ------------------------------------------- */
 
 /* Small Devices, Tablets Portrait */
 @media only screen and (min-width : 768px) {
-  .your-stories .content-inner-top {
-    max-width: initial;
-    width: 100%;
-    padding: 0 10%;
-    margin-top: 0px;
-    height: 100%;
-  }
-    .your-stories .content {
-        height:77%;
-    }
+  // .your-stories .content-inner-top {
+  //   max-width: initial;
+  //   width: 100%;
+  //   padding: 0 10%;
+  //   margin-top: 0px;
+  //   height: 100%;
+  // }
+  //   .your-stories .content {
+  //       height:77%;
+  //   }
 
 }
 
@@ -347,17 +51,23 @@ input[type=radio]#button-20:checked~.arrows#arrow-19 { left: calc(-40% - 324px) 
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
-    .your-stories .content {
-        height:86%;
+    // .your-stories .content {
+    //     height:86%;
+    // }
+    // 
+    #slider  {
+        font-size: 1.5rem;
+        line-height: 1.4;
     }
+
 }
 
 /* ------------------------------------------- */
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1700px) {
-    .your-stories .content {
-        height:82%;
-    }
+    // .your-stories .content {
+    //     height:82%;
+    // }
 
 }
