--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ a.no_decoration {
     float: left;
     margin: 0.5em 1em 0.5em 0;
 }
+.aligncenter{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .footermenu{
   -webkit-box-shadow: 0px 3px 2px -1px rgba(50, 50, 50, 0.75), 0px -3px 2px -3px rgba(50, 50, 50, 0.75);
