--- a/css/home.css
+++ b/css/home.css
@@ -28,12 +28,15 @@
   border-radius: 5px;
 }
 
-.home .metaslider .caption-wrap {
-  position: absolute;
-  top: 32%;
+.home .metaslider .slides li{
+   display: flex !important;
+    align-items: center;
+    justify-content: center;
+}
 
+.home .metaslider .caption-wrap {
   bottom: initial;
-  width: 50%;
+  width: 75%;
   line-height: 33px;
   text-align: center;
   border-radius: 5px;
@@ -41,7 +44,7 @@
   pointer-events: none;
   background-color: #fff;
   color: #333;
-  padding:2em;
+  padding:1em;
   opacity: 0.8;
   box-shadow: 0px 1px 4px 2px rgba(128,128,128,0.5);
 
@@ -53,8 +56,9 @@
 
 
 .home .metaslider .caption {
-    font-size: 28px;
+    font-size: 14px;
     pointer-events: none;
+    line-height: 1.2;
 }
 /* --------- preview block --------- */
 
@@ -85,7 +89,7 @@
   background:rgb(59,157,181);
 }
 #homecards img{
-  width: 70%;
+  
 height: auto;
 }
 
@@ -189,14 +193,13 @@ height: auto;
 @media only screen and (min-width : 768px) {
 
 
-  .home .content-inner-top {
-
+  .home .metaslider .caption-wrap {
+      width: 50%;
+    padding:1em;
   }
-
-
-  .home .content-inner-top p {
-/*    font-size: 2.5vw;
-    line-height: 3.1vw;*/
+  .home .metaslider .caption {
+    font-size: 28px;
+    pointer-events: none;
   }
 
 }
@@ -219,6 +222,7 @@ height: auto;
 /*    font-size: 2vw;
     line-height: 1.9vw;*/
   }
+
 
 }
 
